ingress-exposition/ingress-rules/all-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"devsecops-dashboard-ingress","namespace":"devsecops"},"spec":{"ingressClassName":"nginx","rules":[{"host":"dashboard.riahi.dpdns.org","http":{"paths":[{"backend":{"service":{"name":"devsecops-dashboard-frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-08-11T09:54:38Z"
    generation: 1
    name: devsecops-dashboard-ingress
    namespace: devsecops
    resourceVersion: "648300"
    uid: 6bd5e241-f9dc-4a3d-8610-b0c029f09321
  spec:
    ingressClassName: nginx
    rules:
    - host: dashboard.riahi.dpdns.org
      http:
        paths:
        - backend:
            service:
              name: devsecops-dashboard-frontend-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.164.97
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"taskmanager-ingress","namespace":"devsecops"},"spec":{"ingressClassName":"nginx","rules":[{"host":"taskmanager.riahi.dpdns.org","http":{"paths":[{"backend":{"service":{"name":"taskmanager-app-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-07-20T23:10:56Z"
    generation: 1
    name: taskmanager-ingress
    namespace: devsecops
    resourceVersion: "648297"
    uid: 021d5950-f3ed-464d-8f19-88a1ed63daca
  spec:
    ingressClassName: nginx
    rules:
    - host: taskmanager.riahi.dpdns.org
      http:
        paths:
        - backend:
            service:
              name: taskmanager-app-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.164.97
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"50m"},"name":"jenkins-ingress","namespace":"jenkins"},"spec":{"ingressClassName":"nginx","rules":[{"host":"jenkins.riahi.dpdns.org","http":{"paths":[{"backend":{"service":{"name":"jenkins-service","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
    creationTimestamp: "2026-07-20T10:20:19Z"
    generation: 1
    name: jenkins-ingress
    namespace: jenkins
    resourceVersion: "648296"
    uid: c2144dbe-a356-402a-a0d3-bdfd18e978d3
  spec:
    ingressClassName: nginx
    rules:
    - host: jenkins.riahi.dpdns.org
      http:
        paths:
        - backend:
            service:
              name: jenkins-service
              port:
                number: 8080
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.164.97
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"grafana-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana.riahi.dpdns.org","http":{"paths":[{"backend":{"service":{"name":"kube-prometheus-stack-grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-07-20T13:15:25Z"
    generation: 1
    name: grafana-ingress
    namespace: monitoring
    resourceVersion: "648298"
    uid: 0ac6b571-5c6e-4b43-81bb-06551881a8f3
  spec:
    ingressClassName: nginx
    rules:
    - host: grafana.riahi.dpdns.org
      http:
        paths:
        - backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.164.97
kind: List
metadata:
  resourceVersion: ""
